--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -985,7 +985,7 @@
         "id": "NonkXQSCjZZV",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 656
+          "height": 756
         },
         "outputId": "2be0b5aa-4676-45d0-f531-ddfc78b958d3"
       },
@@ -4365,12 +4365,122 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 41,
       "metadata": {
-        "id": "LIegO8xwvVE9"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 490
+        },
+        "id": "LIegO8xwvVE9",
+        "outputId": "0e6b2233-569d-4422-e0f3-ec9121014691"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date\n",
+              "2020-01-01    50.255682\n",
+              "2020-01-02    43.300000\n",
+              "2020-01-03    50.437500\n",
+              "2020-01-04    47.224299\n",
+              "2020-01-05    39.240602\n",
+              "                ...    \n",
+              "2020-12-27    33.500000\n",
+              "2020-12-28    23.358209\n",
+              "2020-12-29    30.610256\n",
+              "2020-12-30    39.492754\n",
+              "2020-12-31    42.532374\n",
+              "Name: AQI, Length: 366, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>AQI</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2020-01-01</th>\n",
+              "      <td>50.255682</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-01-02</th>\n",
+              "      <td>43.300000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-01-03</th>\n",
+              "      <td>50.437500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-01-04</th>\n",
+              "      <td>47.224299</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-01-05</th>\n",
+              "      <td>39.240602</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-27</th>\n",
+              "      <td>33.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-28</th>\n",
+              "      <td>23.358209</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-29</th>\n",
+              "      <td>30.610256</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-30</th>\n",
+              "      <td>39.492754</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2020-12-31</th>\n",
+              "      <td>42.532374</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>366 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ],
+      "source": [
+        "daily_1=df.groupby('Date')['AQI'].mean()\n",
+        "daily_1.sort_values(ascending=False)\n",
+        "daily =df.groupby('Day')['AQI'].mean()\n",
+        "daily_1\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
@@ -14687,7 +14797,7 @@
             "double_click_zoom": true,
             "dragging": true,
             "dragging_style": "IPY_MODEL_65851d410e0c45b6aef41dbb8a2c5f90",
-            "east": -110.67626953125001,
+            "east": -111.26953125000001,
             "fullscreen": false,
             "inertia": true,
             "inertia_deceleration": 3000,
@@ -14899,7 +15009,7 @@
               "IPY_MODEL_a5d67d71255e40f18dbc6880f5103085"
             ],
             "layout": "IPY_MODEL_fa058b7d76da436594d6d146cf7706c0",
-            "left": 2361,
+            "left": 2387,
             "max_zoom": null,
             "min_zoom": null,
             "modisdate": "2024-10-21",
@@ -14934,15 +15044,15 @@
             ],
             "panes": {},
             "prefer_canvas": false,
-            "right": 3155,
+            "right": 3128,
             "scroll_wheel_zoom": false,
             "south": 30.37287518811804,
-            "style": "IPY_MODEL_d8fc0964647e4836b3bbe37d9f52933f",
+            "style": "IPY_MODEL_eb4f4dac680c4a969d58cf2f8533674d",
             "tap": true,
             "tap_tolerance": 15,
             "top": 6040,
             "touch_zoom": true,
-            "west": -128.12255859375003,
+            "west": -127.55126953125001,
             "window_url": "https://1sgjcvipu8z-496ff2e9c6d22116-0-colab.googleusercontent.com/outputframe.html?vrz=colab_20241014-060136_RC00_685648453",
             "world_copy_jump": false,
             "zoom": 6,
