--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -4365,14 +4365,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
         },
         "id": "LIegO8xwvVE9",
-        "outputId": "0e6b2233-569d-4422-e0f3-ec9121014691"
+        "outputId": "676727e4-5a61-4ff5-f21f-69229fc2bf97"
       },
       "outputs": [
         {
@@ -4471,14 +4471,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 49
         }
       ],
       "source": [
         "daily_1=df.groupby('Date')['AQI'].mean()\n",
-        "daily_1.sort_values(ascending=False)\n",
-        "daily =df.groupby('Day')['AQI'].mean()\n",
+        "daily_1.sort_values(ascending=True)\n",
         "daily_1\n",
+        "why isn't the data ascending?\n",
         "\n"
       ]
     }
